--- a/app/views/renalware/infection_organisms/_edit.html.slim
+++ b/app/views/renalware/infection_organisms/_edit.html.slim
@@ -4,12 +4,13 @@
       a.fi-plus.fi-minus.form-toggle.organism-accordian href="#edit-organism-#{io.object.id}"
         = "#{io.object.organism_code.name} - #{io.object.sensitivity}"
 
-        .right.edit
-          | Edit
+        .right.edit Edit
 
-      .columns.large-6.organism-form.content id="edit-organism-#{io.object.id}" data-index=0
-        = render partial: 'renalware/infection_organisms/fields', locals: { io: io }
+      .columns.large-12.organism-form.content id="edit-organism-#{io.object.id}" data-index=0
+        fieldset
+          legend Edit organism and sensitivity
+          = render partial: 'renalware/infection_organisms/fields', locals: { io: io }
 
-        .organism-form.content id="edit-organism-#{io.object.id}"
-          = io.check_box :_destroy
-          = io.label :_destroy, "Terminate?", class: "delete"
+          .organism-form.content id="edit-organism-#{io.object.id}"
+            = io.check_box :_destroy
+            = io.label :_destroy, "Terminate?", class: "delete"
