--- a/app/views/renalware/exit_site_infections/_form.html.slim
+++ b/app/views/renalware/exit_site_infections/_form.html.slim
@@ -1,60 +1,46 @@
 .exit-site-form
   = es.hidden_field :id
-
   = es.hidden_field :patient_id
 
 .row
-  .large-12.columns
-    .section-underliner
-      | Dates:
-    .large-4.columns
-      = es.label :diagnosis_date
-      = es.date_select(:diagnosis_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year] }, class: "datetime")
+  = field_set_tag do
+    legend Infection
+
+    = es.label :diagnosis_date
+    = es.date_select(:diagnosis_date, { start_year: (1.year.ago).year, end_year: (1.year.since).year, order: [:day, :month, :year] }, class: "datetime")
+
+    = es.label :outcome, "Outcome"
+    = es.text_area :outcome, cols: 50, rows: 6
+
+    = es.label :treatment, "Treatment"
+    = es.text_area :treatment, cols: 50, rows: 6
 
 .row
   .large-12.columns
     .section-underliner
-      | Outcome:
-    .large-12.columns
-      = es.label :outcome, "Outcome notes"
-      = es.text_area :outcome, cols: 50, rows: 6
-
-.row
-  .large-12.columns
-    .section-underliner
-      | Organisms and their sensitivities for this exit site infection:
+      h5 Organisms and their sensitivities
 
     = es.fields_for :infection_organisms do |io|
 
       = render partial: 'renalware/infection_organisms/forms', locals: { io: io }
 
     .large-12.columns
-      = es.link_to_add 'Record a new organism and sensitivity', :infection_organisms, class: 'add-organism-sensitivity button tiny right mt'
+      = es.link_to_add 'Record a new organism and sensitivity', :infection_organisms, class: 'add-organism-sensitivity right mt'
 
 .row
   .large-12.columns
     .section-underliner
-      | Treatment:
-    .large-12.columns
-      = es.label :treatment, "Treatment notes"
-      = es.text_area :treatment, cols: 50, rows: 6
-
-.row
-  .large-12.columns
-    .section-underliner
-      | Medications administered for this exit site infection:
+      h5 Medications administered
 
     = render partial: 'renalware/medications/medication_forms', locals: { object: es }
 
     .large-12.columns
-      = es.link_to_add 'Add a new medication', :medications, model_object: Renalware::Medication.exit_site, class: 'add-medication button tiny right mt'
+      = es.link_to_add 'Add a new medication', :medications, model_object: Renalware::Medication.exit_site, class: 'add-medication right mt'
 
 .row
-  .large-12.columns
-    .section-underliner
-      | Comments:
+  = field_set_tag do
+    legend Comments
 
-    .large-12.columns
-      = es.label :notes, "General notes about this infection"
-      = es.text_area :notes, cols: 50, rows: 6
+    = es.label :notes, "General notes about this infection"
+    = es.text_area :notes, cols: 50, rows: 6
 
