--- a/app/views/renalware/exit_site_infections/edit.html.slim
+++ b/app/views/renalware/exit_site_infections/edit.html.slim
@@ -4,8 +4,7 @@
     = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
 
 .row
-  h4
-    | Update an Exit Site Infection
+  h4 Update an Exit Site Infection
 
   .large-12.columns
     = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
@@ -14,11 +13,10 @@
   .large-12.columns
     = nested_form_for [@patient, @exit_site_infection], method: :put do |es|
 
-      = field_set_tag do
-        .row
-          = render partial: "renalware/exit_site_infections/form", locals: { es: es }
+      .row
+        = render partial: "renalware/exit_site_infections/form", locals: { es: es }
 
-        .row.button-padding
-          = submit_tag "Update Exit Site Infection", class: "button tiny right save"
+      .row.button-padding
+        = submit_tag "Update Exit Site Infection", class: "button tiny right save"
 
-          = link_to "Cancel", patient_exit_site_infection_path(@patient, @exit_site_infection.id), class: "button tiny left cancel"
+        = link_to "Cancel", patient_exit_site_infection_path(@patient, @exit_site_infection.id), class: "button tiny left cancel"
