--- a/app/views/renalware/transplants/recipient_workups/_dated_confirmation_field.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/_dated_confirmation_field.html.slim
@@ -1,7 +1,9 @@
 = f.simple_fields_for attribute, f.object.send(attribute) do |fd|
-  .row
-    .medium-6.columns
+  tr.dated-confirmation
+    td
+      = fd.label f.object.class.human_attribute_name(attribute)
+    td
       = fd.input :status, as: :inline_radio_buttons,
-        label: f.object.class.human_attribute_name(attribute)
-    .medium-6.columns
-      = fd.input :date, as: :date, include_blank: true, label: false
+        label: false, wrapper: "vertical_form"
+    td
+      = fd.input :date, as: :date_picker, label: false, wrapper: "vertical_form"
