--- a/app/views/renalware/transplants/recipient_workups/edit.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/edit.html.slim
@@ -3,8 +3,9 @@
     = render "header"
 
 .row
-  .columns.large-12
+  .columns.large-12.document
     = simple_form_for @workup,
       url: patient_transplants_recipient_workup_path(@patient),
-      method: :patch do |f|
+      method: :patch,
+      wrapper: "horizontal_form" do |f|
       = render 'form', f: f
