--- a/app/views/renalware/medications/_new.html.slim
+++ b/app/views/renalware/medications/_new.html.slim
@@ -1,7 +1,7 @@
 #new-form
   .large-12.columns
     fieldset
-      legend Add a new medication
+      legend Add new medication
 
       .large-12.columns
         .row
