--- a/app/views/renalware/exit_site_infections/edit.html.slim
+++ b/app/views/renalware/exit_site_infections/edit.html.slim
@@ -17,6 +17,6 @@
         = render partial: "renalware/exit_site_infections/form", locals: { es: es }
 
       .row.button-padding
-        = submit_tag "Update Exit Site Infection", class: "button tiny right save"
-
-        = link_to "Cancel", patient_exit_site_infection_path(@patient, @exit_site_infection.id), class: "button tiny left cancel"
+        = submit_tag "Save", class: "button"
+        span= " or "
+        = link_to "cancel", patient_exit_site_infection_path(@patient, @exit_site_infection.id)
