Only add list container when errors are present
This was adding some unnecessary white space

--- a/app/views/renalware/shared/_errors.html.slim
+++ b/app/views/renalware/shared/_errors.html.slim
@@ -1,6 +1,6 @@
-.row
-  ul.error-messages
-    - model.errors.full_messages.each do |msg|
-      li
-        = msg
-
+- if model.errors.any?
+  .row
+    ul.error-messages
+      - model.errors.full_messages.each do |msg|
+        li
+          = msg
