--- a/app/views/renalware/exit_site_infections/edit.html.slim
+++ b/app/views/renalware/exit_site_infections/edit.html.slim
@@ -3,8 +3,9 @@
     = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
     = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
 
-.row
-  h4 Update an Exit Site Infection
+    h1 Exit Site Infection
+
+    = render partial: "renalware/pd_summaries/header", locals: { patient: @patient }
 
   .large-12.columns
     = render partial: "renalware/shared/errors", locals: { model: @exit_site_infection }
