--- a/app/views/renalware/pd_summaries/show.html.slim
+++ b/app/views/renalware/pd_summaries/show.html.slim
@@ -3,13 +3,9 @@
     = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
     = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
 
-    h5 PD Info
+    h1 PD Info
 
-    dl.sub-nav
-      dd= link_to "Add CAPD Regime", new_patient_pd_regime_path(@patient, type: 'CAPDRegime')
-      dd= link_to "Add APD Regime", new_patient_pd_regime_path(@patient, type: 'APDRegime')
-      dd= link_to "Add Peritonitis Episode", new_patient_peritonitis_episode_path(@patient)
-      dd= link_to "Add Exit Site Infection", new_patient_exit_site_infection_path(@patient)
+    = render partial: "renalware/pd_summaries/header", locals: { patient: @patient }
 
 .wide-screen
   = render partial: 'renalware/pd_regimes/current_regime' unless @current_regime.nil?
