--- a/app/views/renalware/peritonitis_episodes/show.html.slim
+++ b/app/views/renalware/peritonitis_episodes/show.html.slim
@@ -3,8 +3,9 @@
     = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
     = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
 
-    h5
-      = "Peritonitis Episode Details - Diagnosed: #{@peritonitis_episode.diagnosis_date.strftime("%d/%m/%Y")}"
+    h1 = "Peritonitis Episode - Diagnosed: #{@peritonitis_episode.diagnosis_date.strftime("%d/%m/%Y")}"
+
+    = render partial: "renalware/pd_summaries/header", locals: { patient: @patient }
 
 .row
   .large-12.columns
@@ -95,5 +96,4 @@
               = @peritonitis_episode.notes
 
       .large-12.columns.button-padding
-        = link_to "Edit", edit_patient_peritonitis_episode_path(@patient, @peritonitis_episode.id), class: "tiny button right"
-        = link_to "Return to PD Info", patient_pd_summary_path(@patient), class: "button tiny left cancel"
+        = link_to "Edit", edit_patient_peritonitis_episode_path(@patient, @peritonitis_episode.id), class: "right"
