--- a/app/views/renalware/peritonitis_episodes/new.html.slim
+++ b/app/views/renalware/peritonitis_episodes/new.html.slim
@@ -11,14 +11,11 @@
     = render partial: "renalware/shared/errors", locals: { model: @peritonitis_episode }
 
 .row
-  ul.no-bullet
-    = field_set_tag do
+  = nested_form_for [@patient, @peritonitis_episode] do |pe|
+    .row
+      = render partial: 'renalware/peritonitis_episodes/form', locals: { pe: pe }
 
-      = nested_form_for [@patient, @peritonitis_episode] do |pe|
-
-        .row
-          = render partial: 'renalware/peritonitis_episodes/form', locals: { pe: pe }
-
-        .row.button-padding
-          = link_to "Cancel", patient_pd_summary_path(@patient), class: "button tiny left cancel mt"
-          = pe.submit "Save Peritonitis Episode", class: "button tiny right save mt"
+    .row.button-padding
+      = submit_tag "Save", class: "button"
+      span= " or "
+      = link_to "cancel", patient_pd_summary_path(@patient)
