--- a/app/views/renalware/peritonitis_episodes/edit.html.slim
+++ b/app/views/renalware/peritonitis_episodes/edit.html.slim
@@ -14,11 +14,10 @@
   .large-12.columns
     = nested_form_for [@patient, @peritonitis_episode], method: :put do |pe|
 
-      = field_set_tag do
-        .row
-          = render partial: "renalware/peritonitis_episodes/form", locals: { pe: pe }
+      .row
+        = render partial: "renalware/peritonitis_episodes/form", locals: { pe: pe }
 
-        .row.button-padding
-          = submit_tag "Update Peritonitis Episode", class: "button tiny right save"
-
-          = link_to "Cancel", patient_peritonitis_episode_path(@patient, @peritonitis_episode.id), class: "button tiny left cancel"
+      .row.button-padding
+        = submit_tag "Save", class: "button"
+        span= " or "
+        = link_to "cancel", patient_peritonitis_episode_path(@patient, @peritonitis_episode.id)
