--- a/app/views/renalware/exit_site_infections/show.html.slim
+++ b/app/views/renalware/exit_site_infections/show.html.slim
@@ -8,47 +8,42 @@
     = render partial: "renalware/pd_summaries/header", locals: { patient: @patient }
 
 .row
-  .large-12.columns
-    = field_set_tag do
-      legend.title-bold
-        = "Last Updated: #{@exit_site_infection.updated_at}"
+  p
+    = "Last Updated: #{@exit_site_infection.updated_at}"
+    = pipe_separator
+    = link_to "Edit", edit_patient_exit_site_infection_path(@patient, @exit_site_infection.id)
 
-      .large-6.columns
+.row
+  .large-6.columns
+    fieldset
+      legend Outcome
 
-        .row
-          .large-12.columns
-            .section-underliner.title-bold
-              | Outcome:
+      p= @exit_site_infection.outcome
 
-            p
-              = @exit_site_infection.outcome
+  .large-6.columns
+      fieldset
+        legend Organisms/Sensitivity
 
-          .large-12.columns
-            .section-underliner.title-bold
-              | Organisms/Sensitivity:
-            .large-12.columns
-              ul.table-data-list
-                = organisms_and_sensitivities(@exit_site_infection.infection_organisms)
+        ul.table-data-list
+          = organisms_and_sensitivities(@exit_site_infection.infection_organisms)
 
-      .large-6.columns
-        .row
-          .large-12.columns
-            .section-underliner.title-bold
-              | Treatment:
-            p
-              = @exit_site_infection.treatment
+.row
+  .large-6.columns
+      fieldset
+        legend Treatment
 
-          .large-12.columns
-            .section-underliner.title-bold
-              | Antibiotics/Routes:
-            .large-12.columns
-              ul.table-data-list
-                = medication_and_route(@exit_site_infection.medications)
-          .large-12.columns
-            .section-underliner.title-bold
-              | Exit Site Infection Notes:
-            p
-              = @exit_site_infection.notes
+        p= @exit_site_infection.treatment
 
-      .large-12.columns.button-padding
-        = link_to "Edit", edit_patient_exit_site_infection_path(@patient, @exit_site_infection.id), class: "right"
+  .large-6.columns
+      fieldset
+        legend Antibiotics/Routes
+
+        ul.table-data-list
+          = medication_and_route(@exit_site_infection.medications)
+
+.row
+  .large-6.columns
+      fieldset
+        legend Exit Site Infection Notes
+
+        p= @exit_site_infection.notes
