View a recipient workup

--- a/app/assets/stylesheets/lib/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/lib/foundation_and_overrides.scss
@@ -1199,6 +1199,7 @@ $h2-font-size: rem-calc(23);
 
 // We use these to control margin and padding
 // $sub-nav-list-margin: rem-calc(-4 0 18);
+$sub-nav-list-margin: rem-calc(-4 0 0);
 // $sub-nav-list-padding-top: rem-calc(4);
 
 // We use this to control the definition
