Printer-friendly show page

--- a/app/assets/stylesheets/lib/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/lib/foundation_and_overrides.scss
@@ -70,7 +70,7 @@
 
 // We use this to control whether or not CSS classes come through in the gem files.
 $include-html-classes: true;
-// $include-print-styles: true;
+$include-print-styles: true;
 $include-html-global-classes: $include-html-classes;
 
 // b. Grid
@@ -213,8 +213,8 @@ $h2-font-size: rem-calc(23);
 // $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
-// $h1-font-reduction: rem-calc(10) !default;
-// $h2-font-reduction: rem-calc(10) !default;
+$h1-font-reduction: rem-calc(0) !default;
+$h2-font-reduction: rem-calc(0) !default;
 // $h3-font-reduction: rem-calc(5) !default;
 // $h4-font-reduction: rem-calc(5) !default;
 // $h5-font-reduction: 0 !default;
