--- a/app/views/renalware/layouts/application.html.slim
+++ b/app/views/renalware/layouts/application.html.slim
@@ -7,7 +7,7 @@ html lang="en"
 
     title= content_for?(:title) ? yield(:title) : "Untitled"
 
-    = stylesheet_link_tag "application"
+    = stylesheet_link_tag "application", media: :all
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tag
 
